# CMakeTemplate

./: .gitattributes  .gitignore  CMakeLists.txt  build.bat  build.sh
src/: main.c
